fix exp figures

--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 5
 date: May 2019- Aug 2019
 img: SGmap.png
-thumbnail: HDB.jpeg
+thumbnail: HDB.jpg
 alt: image-alt
 project-date: May 2019- Aug 2019
 client: Start Bootstrap
