--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -32,5 +32,5 @@ implementation:
             Conducted UAT to refine the features catering for business requirements and reported directly to cross-department stakeholders from all management levels
         </li>
     </ul>
-
+img_sample:
 ---
