--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -44,4 +44,5 @@ implementation:
                 Able to predict the user ratings for each movie with a RMSE lower than 0.8 on average.
             </li> 
         </ul>
+img_sample:
 ---
