--- a/_posts/2020-08-26-cca8.markdown
+++ b/_posts/2020-08-26-cca8.markdown
@@ -1,10 +1,13 @@
 ---
-layout: default
 title: Tennis
+subtitle: NIL
+layout: default
 modal-id: 8
 date: May 2017 - Mar 2018
+thumbnail: NIL
 img: tennis1.jpg
 img_num: 3
+client: SUTD
 img_prefix: tennis
 alt: image-alt
 project-date: May 2017 - Mar 2018
