--- a/_posts/2020-08-26-project-11.markdown
+++ b/_posts/2020-08-26-project-11.markdown
@@ -8,7 +8,7 @@ img: travel.jpg
 thumbnail: travel2.jpg
 long_img: travel_stitched.jpg
 alt: image-alt
-project-date: Lifetime journey
+project-date: Aug 2019 - Jan 2020
 img_num: 3
 client: 
 img_prefix: travel
