--- a/_posts/2014-07-13-project-7.markdown
+++ b/_posts/2014-07-13-project-7.markdown
@@ -1,6 +1,6 @@
 ---
 title: Aviation Data Analytics Project
-subtitle: aviation, data analytics, simulation
+subtitle: aviation, data analytics, SQL, research
 layout: default
 modal-id: 7
 date: Feb 2019
@@ -9,7 +9,7 @@ thumbnail: airport.jpg
 alt: image-alt
 project-date: Feb 2019
 client: Shopee
-category: e-commerce, data science, computer vision, AI
+category: aviation, data analytics, simulation, research, SQL
 problem_statement: 
     <p align="left"> 
         Under the initiative and supervisorship of our ESD dean Prof. Jackson, the Undergradute Research Opportunities Programme(UROP) took aim to real-time simulate the fligt aviation data from ASEAN region and connection to other regions and thereby seek optimatization by further analysis.</p>
