add bizgo, fix typo

--- a/_posts/2020-08-26-project-9.markdown
+++ b/_posts/2020-08-26-project-9.markdown
@@ -22,7 +22,7 @@ description:
     <p align="left">commitment </p>
         <ul> 
             <li align="left">
-                Sourced and coordinated with the external sponsors and successfully secured a sponsorship of $5,000 funds. Went down to have meetings with sponsor companies and negotiated event orgnization requirements.
+                Sourced and coordinated with the external sponsors and successfully secured a sponsorship of $5,000 funds. Went down to have meetings with sponsor companies and negotiated event organization requirements.
             </li>
             <li align="left">
                 Liaised internally and communicated with other varsity teams in local universities.
