fix election thumbnail

--- a/_posts/2020-11-09-project-13.markdown
+++ b/_posts/2020-11-09-project-13.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 13
 date: Nov 2020
 img: overview.png
-thumbnail: election.png
+thumbnail: election.jpg
 alt: image-alt
 project-date: Nov 2020
 client: None
