fixed line break

--- a/_posts/2019-12-19-project-4.markdown
+++ b/_posts/2019-12-19-project-4.markdown
@@ -1,6 +1,6 @@
 ---
 title: Continuous Similarity in Artist Maps
-subtitle: network analysis, music intelligience, ML
+subtitle: network analysis, music intelligience
 layout: default
 modal-id: 4
 date: Jan 2020
